ruuning generalized models

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -28,8 +28,8 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "tif_files = sorted(os.listdir('/data1/fog/stereo-img-coastal-dem-generation/data/dem/'))\n",
-    "save_dir = '/data1/fog/stereo-img-coastal-dem-generation/data/dem/'\n",
+    "tif_files = sorted(os.listdir(r\"C:\\Users\\mhajiesmaeeli\\OneDrive - Texas A&M University-Corpus Christi\\Documents\\Mona\\course\\Thesis\\GitHub\\stereo-img-coastal-dem-generation\\data\\dem\"))\n",
+    "save_dir = r\"C:\\Users\\mhajiesmaeeli\\OneDrive - Texas A&M University-Corpus Christi\\Documents\\Mona\\course\\Thesis\\GitHub\\stereo-img-coastal-dem-generation\\data\\dem\"\n",
     "# Loop through each file\n",
     "for file_path in tif_files:\n",
     "\n",
@@ -44,7 +44,7 @@
     "    new_file_name = f\"{name_parts[0]}{name_parts[1]}{name_parts[2]}{name_parts[3]}.{extension}\"\n",
     "\n",
     "    new_file_path = os.path.join(os.path.dirname(save_dir), new_file_name)\n",
-    "    os.rename(os.path.join('/data1/fog/stereo-img-coastal-dem-generation/data/dem/', file_name), new_file_path)"
+    "    os.rename(os.path.join(r\"C:\\Users\\mhajiesmaeeli\\OneDrive - Texas A&M University-Corpus Christi\\Documents\\Mona\\course\\Thesis\\GitHub\\stereo-img-coastal-dem-generation\\data\\dem\", file_name), new_file_path)"
    ]
   },
   {
@@ -233,6 +233,164 @@
     "        else:\n",
     "            raise ValueError(f\"Unexpected number of DEM files for date {date}: {len(dem_files)}\")\n",
     "    \n",
+    "\n",
+    "    # Create the dataframes\n",
+    "    def create_dataframe(left_files):\n",
+    "        rows = []\n",
+    "        for left_file in left_files:\n",
+    "            date = os.path.basename(left_file)[1:-7]\n",
+    "            time_part = os.path.basename(left_file)[9:11]\n",
+    "\n",
+    "            dem_file = os.path.join(dem_dir, f\"DEM{date}.tif\")\n",
+    "            right_file = os.path.join(right_dir, f\"R{date}{time_part}.tiff\")\n",
+    "            left_file = os.path.join(left_dir, f\"L{date}{time_part}.tiff\")\n",
+    "            \n",
+    "            if os.path.exists(left_file) and os.path.exists(right_file):\n",
+    "                rows.append({\n",
+    "                    'date': date,\n",
+    "                    'left_path': left_file,\n",
+    "                    'right_path': right_file,\n",
+    "                    'dem_path': dem_file\n",
+    "                })\n",
+    "        \n",
+    "        return pd.DataFrame(rows)\n",
+    "\n",
+    "    # print(len(train_data), len(valid_data), len(test_data))\n",
+    "    train_df = create_dataframe(train_data)\n",
+    "    valid_df = create_dataframe(valid_data)\n",
+    "    test_df = create_dataframe(test_data)\n",
+    "    \n",
+    "    return train_df, valid_df, test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def split_data_into_sets(left_dir, right_dir, dem_dir):\n",
+    "    # Get the list of all .tiff files in the left and right directories\n",
+    "    left_files = sorted(glob.glob(os.path.join(left_dir, '*.tiff')))\n",
+    "    right_files = sorted(glob.glob(os.path.join(right_dir, '*.tiff')))\n",
+    "    dem_files = sorted(glob.glob(os.path.join(dem_dir, '*.tif')))\n",
+    "    \n",
+    "    # Dictionary to store lists of files by date\n",
+    "    data_by_date = defaultdict(list)\n",
+    "    \n",
+    "    # Extract date from DEM filenames and group files by date\n",
+    "    for left_file in left_files:\n",
+    "        left_name = os.path.basename(left_file)\n",
+    "        date = left_name[1:-7]  # Extract the date part from the filename\n",
+    "        data_by_date[date].append(left_name)\n",
+    "    \n",
+    "    # Sort the dates\n",
+    "    sorted_dates = sorted(data_by_date.keys())\n",
+    "    \n",
+    "    # Split into train, validation, and test sets\n",
+    "    train_dates = sorted_dates[:7]  # First 7 dates for training\n",
+    "    valid_dates = sorted_dates[7:9]  # Next 2 dates for validation\n",
+    "    test_dates = sorted_dates[9:]  # Last 2 dates for testing\n",
+    "\n",
+    "    train_data = []\n",
+    "    valid_data = []\n",
+    "    test_data = []\n",
+    "    \n",
+    "    # Distribute files into train, validation, and test sets\n",
+    "    for date, left_files in data_by_date.items():\n",
+    "        if date in train_dates:\n",
+    "            train_data.extend(left_files)\n",
+    "        elif date in valid_dates:\n",
+    "            valid_data.extend(left_files)\n",
+    "        elif date in test_dates:\n",
+    "            test_data.extend(left_files)\n",
+    "\n",
+    "    # Function to create dataframes\n",
+    "    def create_dataframe(left_files):\n",
+    "        rows = []\n",
+    "        for left_file in left_files:\n",
+    "            date = os.path.basename(left_file)[1:-7]\n",
+    "            time_part = os.path.basename(left_file)[9:11]\n",
+    "\n",
+    "            dem_file = os.path.join(dem_dir, f\"DEM{date}.tif\")\n",
+    "            right_file = os.path.join(right_dir, f\"R{date}{time_part}.tiff\")\n",
+    "            left_file = os.path.join(left_dir, f\"L{date}{time_part}.tiff\")\n",
+    "            \n",
+    "            if os.path.exists(left_file) and os.path.exists(right_file):\n",
+    "                rows.append({\n",
+    "                    'date': date,\n",
+    "                    'left_path': left_file,\n",
+    "                    'right_path': right_file,\n",
+    "                    'dem_path': dem_file\n",
+    "                })\n",
+    "        \n",
+    "        return pd.DataFrame(rows)\n",
+    "\n",
+    "    # Create dataframes for train, validation, and test sets\n",
+    "    train_df = create_dataframe(train_data)\n",
+    "    valid_df = create_dataframe(valid_data)\n",
+    "    test_df = create_dataframe(test_data)\n",
+    "    \n",
+    "    return train_df, valid_df, test_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "import glob\n",
+    "\n",
+    "def split_data_into_sets(left_dir, right_dir, dem_dir, strategy: str):\n",
+    "    # Get the list of all .tiff files in the left and right directories\n",
+    "    left_files = sorted(glob.glob(os.path.join(left_dir, '*.tiff')))\n",
+    "    right_files = sorted(glob.glob(os.path.join(right_dir, '*.tiff')))\n",
+    "    dem_files = sorted(glob.glob(os.path.join(dem_dir, '*.tif')))\n",
+    "    \n",
+    "    # Dictionary to store lists of files by date\n",
+    "    data_by_date = defaultdict(list)\n",
+    "    \n",
+    "    # Extract date from DEM filenames and group files by date\n",
+    "    for left_file in left_files:\n",
+    "        left_name = os.path.basename(left_file)\n",
+    "        date = left_name[1:-7]  \n",
+    "        data_by_date[date].append(left_name)\n",
+    "    \n",
+    "    train_data = []\n",
+    "    valid_data = []\n",
+    "    test_data = []\n",
+    "    \n",
+    "    # Distribute files into train, validation, and test sets\n",
+    "    if strategy == 'daily':\n",
+    "        for date, left_files in data_by_date.items():\n",
+    "\n",
+    "            if len(left_files) < 3:\n",
+    "                train_data.append(left_files.pop())\n",
+    "\n",
+    "            elif len(left_files) == 3:\n",
+    "                random.shuffle(left_files)\n",
+    "                valid_data.append(left_files[0])\n",
+    "                test_data.append(left_files[1])\n",
+    "                train_data.append(left_files[2])\n",
+    "            elif len(left_files) > 3:\n",
+    "                random.shuffle(left_files)\n",
+    "                valid_data.append(left_files.pop())\n",
+    "                test_data.append(left_files.pop())\n",
+    "                train_data.extend(left_files)\n",
+    "            else:\n",
+    "                raise ValueError(f\"Unexpected number of DEM files for date {date}: {len(dem_files)}\")\n",
+    "            \n",
+    "    elif strategy == 'seasonaly':\n",
     "\n",
     "    # Create the dataframes\n",
     "    def create_dataframe(left_files):\n",
